# iagd

./: .editorconfig  .gitignore  IAGrim-core.sln  IAGrim.sln  LICENSE  README.md  TODO.txt  create.bat  create_beta.bat  create_internal.bat  getver.cmd  makehash.ps1  set-commit-tags.cmd
Auto updater/: AutoUpdater.NET.sln
Cloud/: BackgroundTask.cs  Cloud.csproj  CloudWatcher.cs
DataAccess/: DataAccess.csproj  IItem.cs  IItemStat.cs  Item.cs  ItemStat.cs
DllInjector/: COPYDATASTRUCT.cs  DllInjector.cs  DllInjector.csproj  InjectionHelper.cs  InjectionVerifier.cs  RegisterWindow.cs  Win32.cs
DllInjector64/: DllInjector64.csproj  DllInjectorCopy.cs  Program.cs
Evilsoft.Commons/: .gitignore  app.config  (+7 more)
HookDll/Hook/: .editorconfig  BaseMethodHook.cpp  BaseMethodHook.h  CMakeLists.txt  CanUseDismantle.cpp  CanUseDismantle.h  CloudGetNumFiles.cpp  CloudGetNumFiles.h  CloudRead.cpp  CloudRead.h  CloudWrite.cpp  CloudWrite.h  ControllerPlayerStateIdleRequestNpcAction.cpp  ControllerPlayerStateIdleRequestNpcAction.h  ControllerPlayerStateMoveToRequestMoveAction.cpp  ControllerPlayerStateMoveToRequestMoveAction.h  ControllerPlayerStateMoveToRequestNpcAction.cpp  ControllerPlayerStateMoveToRequestNpcAction.h  Custom.vcproj  Custom.vcxproj  Custom.vcxproj.filters  DataQueue.cpp  DataQueue.h  EquipmentSeedInfo.cpp  EquipmentSeedInfo.h  ExperimentalSeed.cpp  ExperimentalSeed.h  Exports.h  GDIAHook.rc  GDIAHook.sln  GameEngineUpdate.cpp  GameEngineUpdate.h  GetPrivateStash.cpp  GetPrivateStash.h  GrimTypes.cpp  GrimTypes.h  HookLog.cpp  HookLog.h  HookWalkTo.cpp  HookWalkTo.h  (+45 more)
(+1026 files in other folders)
